# arabot_assessment

./: Model.py  README.md  main.py  pyproject.toml  test_script.py
