[tool.poetry]
name = "arabot"
version = "0.1.0"
description = "Junior Data scientist assessment"
authors = ["Mohamed Gamal <m.gamal.shehata@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.0.0"
transformers = "^4.10.0"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
pandas = "^1.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"